# magical-athlete-simulator

./: .gitignore  CHANGELOG.md  pyproject.toml
apps/frontend/: magical_athlete_analysis.py  pyproject.toml
apps/simul_runner/: pyproject.toml
apps/simul_runner/simul_runner/: cli.py  combinations.py  config.py  db_manager.py  db_models.py
configs/: full_config_v1.toml
docs/: index.html
docs/results/: race_positions.parquet  racer_results.parquet  races.parquet
frontend/: magical_athlete_analysis.py
magical_athlete_simulator/: game.py  run_game.py
magical_athlete_simulator/ai/: evaluation.py  smart_agent.py
magical_athlete_simulator/core/: __init__.py  abilities.py  ability_base.py  agent.py  agent_base.py  events.py  modifier_base.py  modifiers.py  protocols.py  registry.py  state.py  types.py
magical_athlete_simulator/engine/: abilities.py  board.py  flow.py  game_engine.py  logging.py  movement.py  roll.py  state.py
magical_athlete_simulator/racers/: __init__.py  banana.py  centaur.py  copycat.py  flip_flop.py  genius.py  gunk.py  huge_baby.py  magician.py  mastermind.py  party_animal.py  romantic.py  scoocher.py  skipper.py
results/: racer_results.parquet  races.parquet
scripts/: publish_frontend.sh  release_git.py  release_prep.py  run_game.py
src/magical-athlete-simulator/: game.py
src/magical_athlete_simulator/: cli.py
tests/: conftest.py  test_board.py  test_full_race.py  test_racer_centaur.py  test_racer_copycat.py  test_racer_huge_baby.py  test_utils.py
tests/core/: test_events.py
tests/engine/: test_board.py  test_turn_order.py  (+1 more)
(+37 files in other folders)
